# Garm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Core/: Core.cpp  Core.h
GUI/: GUI.cpp  GUI.h
core/: core.cpp  core.h
